# AoC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  backup_day14.rs  make_and_run_2022.sh
2015_c/: CMakeLists.txt  common.h  da.h  day01.h  day02.h  day03.h  day05.h  day06.h  day07.h  log.h  main.c
2016_cobol/: day01  day01.cbl  day02.cbl  zcodeformat.yaml
2019_cpp/: CMakeLists.txt  day10.h  day10_test.cpp  main.cpp
2020_zig/: README.md  input.txt
2020_zig/src/: day01.zig  day02.zig  linereader.zig  main.zig  regex.zig
2021/: Cargo.toml  README.md
2021/cuda/: CMakeLists.txt  CMakeSettings.json  cuda.cpp
2021/cuda/day11/: kernel.cu  kernel.h  main.cpp  main_old.cpp
2021/cuda/utils/: cuda_helpers.cpp  cuda_helpers.h  device.h  fpscounter.h  gldisplay.h  gui.cpp  gui.h
2021/src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day14_yt.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  
2022/: CMakeLists.txt  day1.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day2.h  day20.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  main.cpp
2024_csharp/AoC2024/: AoC2024.sln
2024_csharp/AoC2024/AoC2024/: AoCSolution.cs  AoCTerminal.Designer.cs  AoCTerminal.cs  Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Logger.cs  Program.cs
aoc/: Cargo.toml
aoc-cpp/: AocDay.h  AocLines.cpp  AocLines.h  AocObject.h  CMakeLists.txt  Pos2D.h  aoc_object.h  aoclines.h  lib.cpp  pretty.h  timing.h
aoc/src/: array2d.rs  day.rs  lib.rs  sdl.rs
aoc_macros/: Cargo.toml
aoc_macros/src/: lib.rs
cpp/aoc-cpp/: AocLines.h  CMakeLists.txt  Pos2D.cpp  Pos2D.h  timing.cpp
julia/: day1.jl
media/: aoc.xcf
rust/aoc/src/: day.rs  lib.rs  logger.rs
rust/aoc_macros/: Cargo.toml
