[package]
name = "AoC2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../rust/aoc" }
aoc_macros = { path = "../rust/aoc_macros" }
anyhow = "*"
nalgebra = "*"
lazy-regex = "*"
num = "*"
log = "*"
